Update attesation and docs
