# docs/swagger.json
@@ -44,11 +44,19 @@
                     "attestation"
                 ],
                 "summary": "Get NSM attestation",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Nonce",
+                        "name": "nonce",
+                        "in": "query"
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/nitrite.Result"
+                            "$ref": "#/definitions/internal_app.NsmAttestationResponse"
                         }
                     },
                     "500": {
@@ -316,6 +324,20 @@
                 },
                 "publicKey": {
                     "type": "string"
+                }
+            }
+        },
+        "internal_app.NsmAttestationResponse": {
+            "type": "object",
+            "properties": {
+                "attestation": {
+                    "$ref": "#/definitions/nitrite.Result"
+                },
+                "document": {
+                    "type": "array",
+                    "items": {
+                        "type": "integer"
+                    }
                 }
             }
         },
